# replace-23b

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_win.txt  CMakelists.txt  KaHyPar-help.txt  Makefile  README.md  cmake_install.cmake  log1.txt  log2.txt  mtkahypar.help  run-gnu.sh  run-vcpkg.sh  run.sh
module/: hmetis-1.5-linux.tar
module/CImg_library/: CImg.h  README.md  README.txt
module/def/: CMakeLists.txt
module/def/def/: def.tab.cpp
module/glpk/: glpk.h
module/kahypar/: kahypar.lib
module/kahypar/include/: libkahypar.h
module/lef/: CMakeLists.txt
module/lef/lef/: lef.tab.cpp  lef.tab.h
module/mtkahypar/include/: libmtkahypar.h  libmtkahypartypes.h
module/spdlog/example/: example.cpp
module/spdlog/include/spdlog/: logger.h  tweakme.h
module/tclap/: AUTHORS  COPYING  README
module/tclap/docs/: Makefile.am  README  build.html  index.html  manual.html  manual.xml  upload.sh
module/tclap/examples/: CMakeLists.txt  Makefile.am  test-hard-1.cpp  test-hard-2.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test24.cpp  test27.cpp  test28.cpp  test29.cpp  test3.cpp  test30.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
module/tclap/include/tclap/: Makefile.am
src/: 23bParser.cpp  abacusLegalizer.cpp  abacusLegalizer.h  abaxLegalizer.cpp  abaxLegalizer.h  dreamLegalizer.cpp  dreamLegalizer.h  fft.cpp  fft.h  fftsg.cpp  fftsg2d.cpp  fftsg3d.cpp  initialPlace.cpp  initialPlace.h  layerAssignmenter.cpp  layerAssignmenter.h  lefdefParser.cpp  log.cpp  log.h  macroLegalizer.cpp  macroLegalizer.h  main.cpp  nesterovBase.cpp  nesterovBase.h  nesterovPlace.cpp  nesterovPlace.h  outputWriter.cpp  outputWriter.h  parser.h  partitioner.cpp  partitioner.h  placer23b.cpp  placer23b.h  placerBase.cpp  placerBase.h  plot.cpp  plot.h  point.h  randomPartitioner.cpp  randomPartitioner.h  (+6 more)
src/dreamplace/: abacus_legalize_cpu.h  bin_assignment_cpu.h  blank.h  compare_cpu.h  function_cpu.h  greedy_legalize_cpu.cpp  legalization_db.h  legalize_bin_cpu.cpp  math.h  merge_bin_cpu.cpp  merge_bin_cpu.h  msg.cpp  msg.h  status_summary_cpu.h
test/: ProblemB_case1_out.txt  ProblemB_case1_out0.txt  ProblemB_case1_out2.txt  ProblemB_case1_out3.txt  ProblemB_case2.txt  ProblemB_case2_hidden.txt  ProblemB_case2_out.txt  ProblemB_case3_out.txt  ProblemB_case3_out1.txt  case2-output.txt  case3-output.txt  cut_kKaHyPar_sea20.ini  cut_rKaHyPar_sea20.ini  download_ispd18.sh
test/ispd18_test1/: ispd18_test1.input.def  ispd18_test1.input.guide  ispd18_test1.input.lef
test/ispd18_test2/: ispd18_test2.input.lef
test/ispd18_test3/: ispd18_test3.input.lef
test/ispd18_test4/: ispd18_test4.input.lef
test/ispd18_test5/: ispd18_test5.input.lef
